--- a/packages/rocketact-scripts/package.json
+++ b/packages/rocketact-scripts/package.json
@@ -21,6 +21,8 @@
   "homepage": "https://github.com/rocketact/rocketact-scripts#readme",
   "devDependencies": {
     "@types/node": "^10.12.2",
+    "@types/webpack": "^4.4.17",
+    "@types/webpack-chain": "^4.8.1",
     "commitizen": "3.0.4",
     "cz-conventional-changelog": "^2.1.0",
     "husky": "^1.1.3",
@@ -43,5 +45,9 @@
       "prettier --write",
       "git add"
     ]
+  },
+  "dependencies": {
+    "webpack": "^4.25.1",
+    "webpack-chain": "^5.0.1"
   }
 }
