--- a/packages/rocketact-scripts/package.json
+++ b/packages/rocketact-scripts/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/rocketact/rocketact-scripts#readme",
   "devDependencies": {
+    "@types/chalk": "^2.2.0",
     "@types/node": "^10.12.2",
+    "@types/semver": "^5.5.0",
     "@types/webpack": "^4.4.17",
     "@types/webpack-chain": "^4.8.1",
     "commitizen": "3.0.4",
@@ -47,7 +49,12 @@
     ]
   },
   "dependencies": {
+    "chalk": "^2.4.1",
+    "semver": "^5.6.0",
     "webpack": "^4.25.1",
     "webpack-chain": "^5.0.1"
+  },
+  "engines": {
+    "node": ">=7"
   }
 }
