--- a/packages/rocketact-scripts/package.json
+++ b/packages/rocketact-scripts/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
     "commit": "git-cz"
   },
   "repository": {
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/jdf2e/rocketact-scripts#readme",
   "devDependencies": {
+    "@types/jest": "^23.3.9",
     "@types/node": "^10.12.2",
     "@types/semver": "^5.5.0",
     "@types/webpack": "^4.4.17",
@@ -27,8 +28,10 @@
     "commitizen": "3.0.4",
     "cz-conventional-changelog": "^2.1.0",
     "husky": "^1.1.3",
+    "jest": "^23.6.0",
     "lint-staged": "^8.0.4",
     "prettier": "^1.14.3",
+    "ts-jest": "^23.10.4",
     "typescript": "^3.1.6"
   },
   "config": {
