--- a/packages/rocketact-scripts/package.json
+++ b/packages/rocketact-scripts/package.json
@@ -51,7 +51,10 @@
     ]
   },
   "dependencies": {
+    "cssnano": "^4.1.7",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "semver": "^5.6.0",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.25.1",
     "webpack-chain": "^5.0.1"
   },
