--- a/packages/rocketact-scripts/package.json
+++ b/packages/rocketact-scripts/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "cssnano": "^4.1.7",
+    "mini-css-extract-plugin": "^0.4.4",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "semver": "^5.6.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
