--- a/packages/rocketact-scripts/package.json
+++ b/packages/rocketact-scripts/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/jdf2e/rocketact-scripts#readme",
   "devDependencies": {
     "@types/jest": "^23.3.9",
+    "@types/minimist": "^1.2.0",
     "@types/node": "^10.12.2",
     "@types/semver": "^5.5.0",
     "@types/webpack": "^4.4.17",
@@ -53,6 +54,7 @@
   "dependencies": {
     "cssnano": "^4.1.7",
     "mini-css-extract-plugin": "^0.4.4",
+    "minimist": "^1.2.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "semver": "^5.6.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
