--- a/packages/rocketact-scripts/package.json
+++ b/packages/rocketact-scripts/package.json
@@ -33,6 +33,7 @@
     "lint-staged": "^8.0.4",
     "prettier": "^1.14.3",
     "ts-jest": "^23.10.4",
+    "ts-node": "^7.0.1",
     "typescript": "^3.1.6"
   },
   "config": {
