--- a/packages/rocketact-scripts/package.json
+++ b/packages/rocketact-scripts/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/jdf2e/rocketact-scripts#readme",
   "devDependencies": {
+    "@types/glob": "^7.1.1",
     "@types/jest": "^23.3.9",
     "@types/minimist": "^1.2.0",
     "@types/node": "^10.12.2",
@@ -54,6 +55,7 @@
   },
   "dependencies": {
     "cssnano": "^4.1.7",
+    "glob": "^7.1.3",
     "mini-css-extract-plugin": "^0.4.4",
     "minimist": "^1.2.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
