--- a/packages/rocketact-scripts/package.json
+++ b/packages/rocketact-scripts/package.json
@@ -54,7 +54,10 @@
     ]
   },
   "dependencies": {
+    "@types/detect-port": "^1.1.0",
+    "@types/webpack-dev-server": "^3.1.1",
     "cssnano": "^4.1.7",
+    "detect-port": "^1.2.3",
     "glob": "^7.1.3",
     "mini-css-extract-plugin": "^0.4.4",
     "minimist": "^1.2.0",
@@ -62,7 +65,8 @@
     "semver": "^5.6.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.25.1",
-    "webpack-chain": "^5.0.1"
+    "webpack-chain": "^5.0.1",
+    "webpack-dev-server": "^3.1.10"
   },
   "engines": {
     "node": ">=7"
