--- a/packages/rocketact-scripts/package.json
+++ b/packages/rocketact-scripts/package.json
@@ -54,16 +54,28 @@
     ]
   },
   "dependencies": {
+    "@babel/core": "^7.1.6",
     "@types/detect-port": "^1.1.0",
     "@types/webpack-dev-server": "^3.1.1",
+    "autoprefixer": "^9.3.1",
+    "babel-loader": "^8.0.4",
+    "css-loader": "^1.0.1",
     "cssnano": "^4.1.7",
     "detect-port": "^1.2.3",
+    "file-loader": "^2.0.0",
     "glob": "^7.1.3",
-    "mini-css-extract-plugin": "^0.4.4",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.5",
     "minimist": "^1.2.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-flexbugs-fixes": "^4.1.0",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
     "semver": "^5.6.0",
+    "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.0.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.25.1",
     "webpack-chain": "^5.0.1",
     "webpack-dev-server": "^3.1.10"
