--- a/packages/rocketact-scripts/package.json
+++ b/packages/rocketact-scripts/package.json
@@ -62,6 +62,7 @@
     "@types/webpack-dev-server": "^3.1.1",
     "autoprefixer": "^9.3.1",
     "babel-loader": "^8.0.4",
+    "babel-preset-rocketact": "0.0.1",
     "css-loader": "^1.0.1",
     "cssnano": "^4.1.7",
     "detect-port": "^1.2.3",
@@ -75,6 +76,8 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
+    "rocketact-dev-utils": "0.0.1",
+    "rocketact-plugin-polyfill": "0.0.1",
     "sass-loader": "^7.1.0",
     "semver": "^5.6.0",
     "style-loader": "^0.23.1",
