--- a/packages/rocketact-scripts/package.json
+++ b/packages/rocketact-scripts/package.json
@@ -62,7 +62,7 @@
     "@types/webpack-dev-server": "^3.1.1",
     "autoprefixer": "^9.3.1",
     "babel-loader": "^8.0.4",
-    "babel-preset-rocketact": "0.0.1",
+    "babel-preset-rocketact": "^0.1.0",
     "css-loader": "^1.0.1",
     "cssnano": "^4.1.7",
     "detect-port": "^1.2.3",
