--- a/packages/rocketact-scripts/package.json
+++ b/packages/rocketact-scripts/package.json
@@ -29,7 +29,7 @@
     "@types/node": "^10.12.2",
     "@types/semver": "^5.5.0",
     "@types/webpack": "^4.4.17",
-    "@types/webpack-chain": "^4.8.1",
+    "@types/webpack-chain": "^5.0.0",
     "commitizen": "3.0.4",
     "cz-conventional-changelog": "^2.1.0",
     "husky": "^1.1.3",
@@ -76,7 +76,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
-    "rocketact-dev-utils": "0.0.1",
+    "rocketact-dev-utils": "^0.1.0",
     "rocketact-plugin-polyfill": "0.0.1",
     "sass-loader": "^7.1.0",
     "semver": "^5.6.0",
