--- a/packages/rocketact-web-console/package.json
+++ b/packages/rocketact-web-console/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc --project tsconfig-server.json; webpack",
-    "watch": "tsc --project tsconfig-server.json --watch & webpack --watch"
+    "watch": "tsc --project tsconfig-server.json --watch & webpack --watch",
+    "watch:client": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -23,11 +24,16 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
     "@types/axios": "^0.14.0",
+    "@types/execa": "^0.9.0",
     "@types/express": "^4.16.0",
+    "@types/fs-extra": "^5.0.4",
+    "@types/gravatar": "^1.4.28",
     "@types/node": "^10.12.15",
     "@types/react": "^16.7.17",
     "@types/react-dom": "^16.0.11",
     "@types/react-router-dom": "^4.3.1",
+    "@types/react-timeago": "^4.1.0",
+    "@types/semver": "^5.5.0",
     "autoprefixer": "^9.4.3",
     "babel-loader": "^8.0.4",
     "babel-plugin-import": "^1.11.0",
@@ -49,10 +55,16 @@
   "dependencies": {
     "antd": "^3.11.2",
     "axios": "^0.18.0",
+    "execa": "^1.0.0",
     "express": "^4.16.4",
+    "fs-extra": "^7.0.1",
+    "gravatar": "^1.8.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
-    "rocketact-dev-utils": "^0.1.0"
+    "react-timeago": "^4.1.9",
+    "rocketact-dev-utils": "^0.1.0",
+    "rxjs": "^6.3.3",
+    "semver": "^5.6.0"
   }
 }
