--- a/packages/rocketact-web-console/package.json
+++ b/packages/rocketact-web-console/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc --project tsconfig-server.json; webpack",
     "watch": "tsc --project tsconfig-server.json --watch & webpack --watch",
-    "watch:client": "webpack --watch"
+    "watch:client": "webpack --watch",
+    "watch:server": "tsc --project tsconfig-server.json --watch"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,8 @@
   "homepage": "https://github.com/jdf2e/rocketact-web-console#readme",
   "devDependencies": {
     "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-proposal-decorators": "^7.2.3",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
@@ -59,6 +62,8 @@
     "express": "^4.16.4",
     "fs-extra": "^7.0.1",
     "gravatar": "^1.8.0",
+    "mobx": "^5.8.0",
+    "mobx-react": "^5.4.3",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
