--- a/packages/rocketact/package.json
+++ b/packages/rocketact/package.json
@@ -9,6 +9,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "commit": "git-cz"
   },
+  "bin": {
+    "rocketact": "./dist/bin/rocketact.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jdf2e/rocketact.git"
@@ -24,8 +27,10 @@
     "commitizen": "3.0.4",
     "cz-conventional-changelog": "^2.1.0",
     "husky": "^1.1.3",
+    "jest": "^23.6.0",
     "lint-staged": "^8.0.4",
     "prettier": "^1.14.3",
+    "ts-node": "^7.0.1",
     "typescript": "^3.1.6"
   },
   "config": {
@@ -45,9 +50,14 @@
     ]
   },
   "dependencies": {
-    "chalk": "^2.4.1"
+    "chalk": "^2.4.1",
+    "commander": "^2.19.0",
+    "fs-extra": "^7.0.1",
+    "mustache": "^3.0.1",
+    "rocketact-dev-utils": "^0.1.0",
+    "validate-npm-package-name": "^3.0.0"
   },
   "engines": {
-    "node": ">=7"
+    "node": ">=8"
   }
 }
