--- a/packages/rocketact-scripts/package.json
+++ b/packages/rocketact-scripts/package.json
@@ -41,6 +41,9 @@
     "ts-node": "^7.0.1",
     "typescript": "^3.1.6"
   },
+  "files": [
+    "/dist"
+  ],
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
