--- a/packages/rocketact-web-console/package.json
+++ b/packages/rocketact-web-console/package.json
@@ -19,6 +19,7 @@
     "url": "https://github.com/jdf2e/rocketact-web-console/issues"
   },
   "homepage": "https://github.com/jdf2e/rocketact-web-console#readme",
+  "files":["index.js", "/server", "/client"],
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.2.3",
