--- a/packages/rocketact-web-console/package.json
+++ b/packages/rocketact-web-console/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rocketact-web-console",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Rocketact Web Console",
   "main": "index.js",
   "scripts": {
@@ -19,7 +19,11 @@
     "url": "https://github.com/jdf2e/rocketact-web-console/issues"
   },
   "homepage": "https://github.com/jdf2e/rocketact-web-console#readme",
-  "files":["index.js", "/server", "/client"],
+  "files": [
+    "index.js",
+    "/server",
+    "/client"
+  ],
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.2.3",
