--- a/packages/rocketact-scripts/package.json
+++ b/packages/rocketact-scripts/package.json
@@ -81,6 +81,7 @@
     "postcss-loader": "^3.0.0",
     "progress-bar-webpack-plugin": "^1.11.0",
     "rocketact-dev-utils": "^0.2.0",
+    "rocketact-web-console": "0.0.3",
     "sass-loader": "^7.1.0",
     "semver": "^5.6.0",
     "style-loader": "^0.23.1",
