--- a/packages/rocketact-web-console/package.json
+++ b/packages/rocketact-web-console/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.3",
   "description": "Rocketact Web Console",
   "main": "index.js",
-  "keywords": ["rocketact"],
+  "keywords": [
+    "rocketact"
+  ],
   "scripts": {
     "build": "tsc --project tsconfig-server.json; webpack",
     "watch": "tsc --project tsconfig-server.json --watch & webpack --watch",
@@ -75,7 +77,7 @@
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-timeago": "^4.1.9",
-    "rocketact-dev-utils": "^0.2.1",
+    "rocketact-dev-utils": "^1.0.0",
     "rxjs": "^6.3.3",
     "semver": "^5.6.0"
   },
