chore: update dependency

--- a/packages/rocketact-scripts/package.json
+++ b/packages/rocketact-scripts/package.json
@@ -9,7 +9,9 @@
     "test": "jest --coverage",
     "commit": "git-cz"
   },
-  "keywords":["rocketact"],
+  "keywords": [
+    "rocketact"
+  ],
   "bin": {
     "rocketact-scripts": "./dist/bin/rocketact-scripts.js"
   },
@@ -66,7 +68,7 @@
     "@types/detect-port": "^1.1.0",
     "autoprefixer": "^9.3.1",
     "babel-loader": "^8.0.4",
-    "babel-preset-rocketact": "^0.1.0",
+    "babel-preset-rocketact": "^1.0.0",
     "css-loader": "^1.0.1",
     "cssnano": "^4.1.7",
     "detect-port": "^1.2.3",
@@ -81,8 +83,8 @@
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
     "progress-bar-webpack-plugin": "^1.11.0",
-    "rocketact-dev-utils": "^0.2.0",
-    "rocketact-web-console": "0.0.3",
+    "rocketact-dev-utils": "^1.0.0",
+    "rocketact-web-console": "^1.0.0",
     "sass-loader": "^7.1.0",
     "semver": "^5.6.0",
     "style-loader": "^0.23.1",
