--- a/packages/rocketact/template/.prettierrc
+++ b/packages/rocketact/template/.prettierrc
@@ -1,11 +1,11 @@
 {
-  "printWidth": 100,
-  "semi": true,
-  "singleQuote": true,
-  "trailingComma": "none",
+  "arrowParens": "always",
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
-  "arrowParens": "always",
+  "printWidth": 100,
+  "proseWrap": "preserve",
   "requirePragma": false,
-  "proseWrap": "preserve"
+  "semi": true,
+  "singleQuote": true,
+  "trailingComma": "none"
 }
