feat(template): remove redundancy config, clear the pkg.json dependences

--- a/packages/rocketact/template/package.json
+++ b/packages/rocketact/template/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rockectact",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "main": "index.js",
   "scripts": {
     "start": "rocketact-scripts start",
@@ -14,13 +14,13 @@
   "author": "author <author@rocketact.com>",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^3.2.2",
-    "tslint": "^5.12.0",
-    "tslint-config-prettier": "^1.13.0",
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
-    "react-hot-loader": "^4.0.1",
-    "rocketact-scripts": "^1.0.0"
+    "@types/webpack": "^4.4.22",
+    "@types/webpack-env": "^1.13.6",
+    "react-hot-loader": "^4.6.3",
+    "rocketact-scripts": "^1.0.0",
+    "tslint": "^5.12.0"
   },
   "dependencies": {
     "react": "^16.7.0",
