--- a/template/package.json
+++ b/template/package.json
@@ -20,7 +20,8 @@
     "@types/webpack-env": "^1.13.6",
     "react-hot-loader": "^4.6.3",
     "rocketact-scripts": "^1.0.0",
-    "tslint": "^5.12.0"
+    "tslint": "^5.12.0",
+    "typescript": "^3.2.2"
   },
   "dependencies": {
     "react": "^16.7.0",
