--- a/packages/rocketact/template/package.json
+++ b/packages/rocketact/template/package.json
@@ -13,6 +13,14 @@
   },
   "author": "author <author@rocketact.com>",
   "license": "ISC",
+  "browserslist": [
+    "> 0.5%",
+    "last 2 versions",
+    "Firefox ESR",
+    "not dead",
+    "ie >= 9",
+    "iOS >= 8"
+  ],
   "devDependencies": {
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
