--- a/packages/rocketact-scripts/package.json
+++ b/packages/rocketact-scripts/package.json
@@ -74,6 +74,7 @@
     "del": "^3.0.0",
     "detect-port": "^1.2.3",
     "file-loader": "^2.0.0",
+    "fork-ts-checker-webpack-plugin": "^0.5.2",
     "glob": "^7.1.3",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
