--- a/packages/rocketact/template/package.json
+++ b/packages/rocketact/template/package.json
@@ -29,7 +29,8 @@
     "react-hot-loader": "^4.6.3",
     "rocketact-scripts": "^1.0.0",
     "tslint": "^5.12.0",
-    "typescript": "^3.2.2"
+    "typescript": "^3.2.2",
+    "tslint-config-prettier": "^1.17.0"
   },
   "dependencies": {
     "react": "^16.7.0",
