--- a/packages/rocketact-scripts/package.json
+++ b/packages/rocketact-scripts/package.json
@@ -16,14 +16,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jdf2e/rocketact-scripts.git"
+    "url": "git+https://github.com/jdf2e/rocketact.git"
   },
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jdf2e/rocketact-scripts/issues"
+    "url": "https://github.com/jdf2e/rocketact/issues"
   },
-  "homepage": "https://github.com/jdf2e/rocketact-scripts#readme",
+  "homepage": "https://jdf2e.github.io/rocketact/",
   "files": [
     "/dist"
   ],
