feat(rocketact): update project template
rename App.jsx -> app.jsx; update READE.md; add `publicPath` field to `package.json`; exclude
`public` and `postcss.config.js` in tsconfig.js; add `public` folder

--- a/packages/rocketact/template/package.json
+++ b/packages/rocketact/template/package.json
@@ -2,6 +2,7 @@
   "name": "rockectact",
   "version": "0.1.0",
   "main": "index.js",
+  "publicPath": "/",
   "scripts": {
     "start": "rocketact-scripts start",
     "build": "rocketact-scripts build",
