--- a/packages/rocketact-plugin-butler/package.json
+++ b/packages/rocketact-plugin-butler/package.json
@@ -16,7 +16,7 @@
   "bugs": {
     "url": "https://github.com/jdf2e/rocketact/issues"
   },
-  "homepage": "https://jdf2e.github.io/rocketact/",
+  "homepage": "https://rocketact.js.org/",
   "peerDependencies": {
     "rocketact-scripts": "^1.0.0"
   },
