--- a/packages/rocketact-web-console/package.json
+++ b/packages/rocketact-web-console/package.json
@@ -21,7 +21,7 @@
   "bugs": {
     "url": "https://github.com/jdf2e/rocketact/issues"
   },
-  "homepage": "https://jdf2e.github.io/rocketact/",
+  "homepage": "https://rocketact.js.org/",
   "files": [
     "index.js",
     "/server",
