--- a/packages/babel-preset-rocketact/package.json
+++ b/packages/babel-preset-rocketact/package.json
@@ -31,5 +31,5 @@
   "bugs": {
     "url": "https://github.com/jdf2e/rocketact/issues"
   },
-  "homepage": "https://jdf2e.github.io/rocketact/"
+  "homepage": "https://rocketact.js.org/"
 }
