feat(scripts&webconsole): 需求，webconsole打开支持不带后缀的页面url
fix #83

--- a/packages/rocketact-web-console/package.json
+++ b/packages/rocketact-web-console/package.json
@@ -1,13 +1,13 @@
 {
   "name": "rocketact-web-console",
-  "version": "1.1.10",
+  "version": "1.1.11",
   "description": "Rocketact Web Console",
   "main": "index.js",
   "keywords": [
     "rocketact"
   ],
   "scripts": {
-    "build": "tsc --project tsconfig-server.json; webpack",
+    "build": "tsc --project tsconfig-server.json & webpack",
     "watch": "tsc --project tsconfig-server.json --watch & webpack --watch",
     "watch:client": "webpack --watch",
     "watch:server": "tsc --project tsconfig-server.json --watch",
